Fixed issue that subtitle was not visible in section slides
Fixes #4

--- a/Developer Education/Presentation/public/stylesheets/style.css
+++ b/Developer Education/Presentation/public/stylesheets/style.css
@@ -23,7 +23,7 @@ table {
   background-image: url("../images/white.png");
   background-position-y: 0em;
   background-position-x: 0em;
-  background-size: 100% 50%;
+  background-size: 100% 37%;
   display: block;
   height: 100%;
   padding-top: 18%;
